--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,17 +1,31 @@
-nav{
-    height: 4rem;
-    background-color: rgb(196, 196, 196);
+.navbar{
     align-items: center;
     display: flex;
     margin: auto;
     width: 95vw;
-    border-radius: 5rem;
-    border: 1px solid rgb(196, 196, 196);
+    justify-content: center;
+    list-style: none;
 }
 
-h1{
+.navbar li{
+    margin: 0 1rem;
+}
+
+.navbar h1{
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Sedgwick Ave', cursive;
+    color: #fff;
+    padding: 1rem 2rem;    
+    background-color: #000;
+    border-radius: 0 0 2rem 2rem;
+}
+
+.navbar a{
+    text-decoration: none;
+}
+
+.navbar h3{
     font-family: 'Roboto', sans-serif;
     font-family: 'Sedgwick Ave', cursive;
     color: #000;
-    padding: 1rem;    
 }
