--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,4 +1,4 @@
-.navbar{
+.navbar ul, .navbar{
     align-items: center;
     display: flex;
     margin: auto;
@@ -9,6 +9,11 @@
 
 .navbar li{
     margin: 0 1rem;
+}
+
+.navbar li img{
+    width: 30px;
+    height: 30px;
 }
 
 .navbar h1{
