--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,5 +1,5 @@
 .banner-cont{
-    width: 70%;
+    /* width: 90%; */
     margin: 1rem auto;
     text-align: center;
     justify-content: center;
@@ -7,6 +7,7 @@
 }
 
 .banner-img{
-    border-radius: 2rem;
+    /* border-radius: 2rem; */
     width: 100%;
+    max-height: 700px;
 }
