--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,12 +8,13 @@
 }
 
 .navbar li{
-    margin: 0 1rem;
+    margin: 0 0.5rem;
 }
 
 .navbar li img{
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
+    padding: 10px;
 }
 
 .navbar h1{
@@ -33,4 +34,19 @@
     font-family: 'Roboto', sans-serif;
     font-family: 'Sedgwick Ave', cursive;
     color: #000;
+    padding: 1rem 2rem;
+}
+
+.navbar h1:hover{
+    color: #eae8e8;
+}
+
+.navbar h3:hover{
+    background-color: #eae8e8;
+    border-radius: 1rem;
+}
+
+.navbar li img:hover{
+    background-color: #eae8e8;
+    border-radius: 1rem;
 }
